--- a/DXTutorial.vcxproj.filters
+++ b/DXTutorial.vcxproj.filters
@@ -143,7 +143,7 @@
     <ClCompile Include="Volume\Volume_IO.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Graphics\LineRendering.cpp">
+    <ClCompile Include="Graphics\LineRenderer.cpp">
       <Filter>Source Files\Graphics</Filter>
     </ClCompile>
   </ItemGroup>
@@ -286,10 +286,13 @@
     <ClInclude Include="RaycastingOptions.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics\LineRendering.h">
+    <ClInclude Include="Graphics\RenderingOptions.h">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
-    <ClInclude Include="Graphics\RenderingOptions.h">
+    <ClInclude Include="Graphics\StreamlineRenderer.h">
+      <Filter>Header Files\Graphics</Filter>
+    </ClInclude>
+    <ClInclude Include="Graphics\LineRenderer.h">
       <Filter>Header Files\Graphics</Filter>
     </ClInclude>
   </ItemGroup>
