--- a/imgui.ini
+++ b/imgui.ini
@@ -9,12 +9,17 @@ Size=347,240
 Collapsed=0
 
 [Window][Solver Options]
-Pos=3,12
-Size=415,401
+Pos=4,2
+Size=360,427
 Collapsed=0
 
 [Window][Log]
-Pos=19,433
-Size=391,290
+Pos=3,427
+Size=360,155
+Collapsed=0
+
+[Window][Line Rendering Options]
+Pos=1,593
+Size=365,178
 Collapsed=0
 
