--- a/imgui.ini
+++ b/imgui.ini
@@ -9,17 +9,22 @@ Size=347,240
 Collapsed=0
 
 [Window][Solver Options]
-Pos=9,8
+Pos=3,164
 Size=360,427
 Collapsed=0
 
 [Window][Log]
-Pos=6,441
+Pos=1,5
 Size=360,155
 Collapsed=0
 
 [Window][Line Rendering Options]
-Pos=3,603
+Pos=1,596
 Size=365,178
+Collapsed=0
+
+[Window][Raycasting Options]
+Pos=-2,780
+Size=370,134
 Collapsed=0
 
